window.SIDEBAR_ITEMS = {"enum":["InvocationReasonProto","NodeStatusProto"],"mod":["connection_service_client","connection_service_server","converters","health_check_response","health_service_client","health_service_server","key_proto","message_content_proto","message_target_proto","services"],"struct":["AddressableLeaseProto","AddressableReferenceProto","ConnectionInfoRequestProto","ConnectionInfoResponseProto","ErrorProto","HealthCheckRequest","HealthCheckResponse","InvocationRequestProto","InvocationResponseErrorProto","InvocationResponseProto","KeyProto","MessageContentProto","MessageProto","MessageTargetProto","NamespacedAddressableReferenceProto","NoKeyProto","NodeCapabilitiesProto","NodeIdProto","NodeInfoProto","NodeLeaseProto"]};